show tab delete button only on hover, fix delete button getting cut off

--- a/packages/pro/src/blocks/toggle/editor.scss
+++ b/packages/pro/src/blocks/toggle/editor.scss
@@ -1,7 +1,7 @@
 .tab-headings {
     display: flex;
     gap: 16px;
-    padding: 8px 0;
+    padding: 10px 0;
     overflow-x: scroll;
 }
 
@@ -12,6 +12,10 @@
     align-items: center;
     overflow: visible;
     position: relative;
+
+    &:hover .tab-heading-remove {
+        display: flex;
+    }
 }
 
 .tab-heading p {
@@ -25,6 +29,7 @@
 }
 
 .tab-heading-remove {
+    display: none;
     position: absolute;
     top: -8px;
     right: -5px;
@@ -33,7 +38,6 @@
     background-color: #ff4d4d;
     border-radius: 50%;
     cursor: pointer;
-    display: flex;
     align-items: center;
     justify-content: center;
     padding: 0;
